--- a/Squids-Movies-App/SquidsMovieApp.WPF/MainWindow.xaml
+++ b/Squids-Movies-App/SquidsMovieApp.WPF/MainWindow.xaml
@@ -7,6 +7,6 @@
         mc:Ignorable="d"
         Title="SquidFlix" Height="800" Width="1200"
         ShowsNavigationUI="False"
-        Source="HomeWindow.xaml"
+        Source="LoginWindow.xaml"
                   WindowStyle="ToolWindow">
 </NavigationWindow>
