--- a/Squids-Movies-App/SquidsMovieApp.WPF/RegisterWindow.xaml
+++ b/Squids-Movies-App/SquidsMovieApp.WPF/RegisterWindow.xaml
@@ -1,12 +1,12 @@
-﻿<Page x:Class="SquidsMovieApp.WPF.HomeWindow"
+﻿<Page x:Class="SquidsMovieApp.WPF.RegisterWindow"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:SquidsMovieApp.WPF"
       mc:Ignorable="d" 
-      d:DesignHeight="800" d:DesignWidth="1200"
-      Title="Squids Movies - Home">
+      d:DesignHeight="450" d:DesignWidth="800"
+      Title="RegisterWindow">
 
     <Grid>
         <Grid.ColumnDefinitions>
@@ -24,25 +24,22 @@
             <Grid.ColumnDefinitions>
                 <ColumnDefinition />
             </Grid.ColumnDefinitions>
-            <StackPanel Grid.Column="0">
+            <StackPanel Grid.Column="0" FocusManager.FocusedElement="{Binding ElementName=EmailRegisterTB}">
+                <TextBlock  Margin="0,0,0,5" FontSize="17">Email:</TextBlock>
+                <TextBox Name="EmailRegisterTB" Margin="0,0,0,5" FontSize="14"></TextBox>
                 <TextBlock Margin="0,0,0,5" FontSize="17">Username:</TextBlock>
                 <TextBox Margin="0,0,0,5" FontSize="14"></TextBox>
                 <TextBlock Margin="0,0,0,5" FontSize="17">Password:</TextBlock>
+                <PasswordBox Margin="0,0,0,5" FontSize="14"/>
+                <TextBlock Margin="0,0,0,5" FontSize="17">Repeat password:</TextBlock>
                 <PasswordBox Margin="0,0,0,15" FontSize="14"/>
-                <Button  FontSize="15" Width="50" Margin="0,0,0,15" Content="Login" Click="LoginBtnClicked"/>
-                <TextBlock FontSize="12"><Hyperlink>Don't have an account? Register.</Hyperlink></TextBlock>
+                <StackPanel Orientation="Horizontal">
+                    <Button  FontSize="15" Width="65" Margin="0,0,15,15" Content="Register" Click="RegisterBtnClicked"/>
+                    <Button  FontSize="15" Width="65" Margin="0,0,15,15" Content="Go Back" Click="GoBackBtnClicked"/>
+                </StackPanel>
+                
             </StackPanel>
         </Grid>
-        <!--<Viewbox Grid.Column="0" Grid.Row="1" StretchDirection="Both" Margin="10,0,10,0">
-            <TextBlock Text="Some greeting message here or info or something!" FontSize="25"/>
-        </Viewbox>-->
-        <!--<StackPanel FlowDirection="RightToLeft" Orientation="Horizontal" Grid.Column="0" Grid.Row="2" Background="CadetBlue" Height="55">
-            <Button  Width="125" Height="25" Content="Exit" Margin="15,0,0,0" />
-        </StackPanel>-->
-        <DockPanel LastChildFill="False" Grid.Column="0" Grid.Row="2" Background="CadetBlue" Height="55">
-            <Button Width="125" Height="25" Content="Exit" DockPanel.Dock="Right" Margin="0,0,15,0" Click="ExitBtnClicked"/>
-            <!--<Button Width="125" Height="25" Content="Go back" DockPanel.Dock="Right" Margin="0,0,15,0"/>-->
-        </DockPanel>
+        <ContentPresenter Grid.Column="0" Grid.Row="2" ContentTemplate="{StaticResource Footer}" />
     </Grid>
-
 </Page>
