--- a/Squids-Movies-App/SquidsMovieApp.WPF/RegisterWindow.xaml
+++ b/Squids-Movies-App/SquidsMovieApp.WPF/RegisterWindow.xaml
@@ -5,7 +5,7 @@
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:SquidsMovieApp.WPF"
       mc:Ignorable="d" 
-      d:DesignHeight="450" d:DesignWidth="800"
+      d:DesignHeight="598" d:DesignWidth="867"
       Title="RegisterWindow">
 
     <Grid>
@@ -24,20 +24,26 @@
             <Grid.ColumnDefinitions>
                 <ColumnDefinition />
             </Grid.ColumnDefinitions>
-            <StackPanel Grid.Column="0" FocusManager.FocusedElement="{Binding ElementName=EmailRegisterTB}">
-                <TextBlock  Margin="0,0,0,5" FontSize="17">Email:</TextBlock>
+            <StackPanel Grid.Column="0">
+                <TextBlock  Margin="0,0,0,5" FontSize="17">Email*:</TextBlock>
                 <TextBox Name="EmailRegisterTB" Margin="0,0,0,5" FontSize="14"></TextBox>
-                <TextBlock Margin="0,0,0,5" FontSize="17">Username:</TextBlock>
+                <TextBlock Margin="0,0,0,5" FontSize="17">Username*:</TextBlock>
                 <TextBox Margin="0,0,0,5" FontSize="14"></TextBox>
-                <TextBlock Margin="0,0,0,5" FontSize="17">Password:</TextBlock>
+                <TextBlock Margin="0,0,0,5" FontSize="17">First name:</TextBlock>
+                <TextBox Margin="0,0,0,5" FontSize="14"></TextBox>
+                <TextBlock Margin="0,0,0,5" FontSize="17">Last name:</TextBlock>
+                <TextBox Margin="0,0,0,5" FontSize="14"></TextBox>
+                <TextBlock Margin="0,0,0,5" FontSize="17">Age:</TextBlock>
+                <TextBox Margin="0,0,0,5" FontSize="14"></TextBox>
+                <TextBlock Margin="0,0,0,5" FontSize="17">Password*:</TextBlock>
                 <PasswordBox Margin="0,0,0,5" FontSize="14"/>
-                <TextBlock Margin="0,0,0,5" FontSize="17">Repeat password:</TextBlock>
+                <TextBlock Margin="0,0,0,5" FontSize="17">Repeat password*:</TextBlock>
                 <PasswordBox Margin="0,0,0,15" FontSize="14"/>
                 <StackPanel Orientation="Horizontal">
                     <Button  FontSize="15" Width="65" Margin="0,0,15,15" Content="Register" Click="RegisterBtnClicked"/>
                     <Button  FontSize="15" Width="65" Margin="0,0,15,15" Content="Go Back" Click="GoBackBtnClicked"/>
                 </StackPanel>
-                
+                <TextBlock FontSize="10" Foreground="Gray">*Required field.</TextBlock>
             </StackPanel>
         </Grid>
         <ContentPresenter Grid.Column="0" Grid.Row="2" ContentTemplate="{StaticResource Footer}" />
