--- a/Squids-Movies-App/SquidsMovieApp.WPF/LoginWindow.xaml
+++ b/Squids-Movies-App/SquidsMovieApp.WPF/LoginWindow.xaml
@@ -17,9 +17,7 @@
             <RowDefinition />
             <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
-        <Border Grid.Column="0" Grid.Row="0" Height="55" Padding="10" Background="CornflowerBlue">
-            <Label VerticalAlignment="Center" Foreground="White">Squids Logo And Navigation</Label>
-        </Border>
+        <ContentPresenter Grid.Column="0" Grid.Row="0" ContentTemplate="{StaticResource LogoHeader}" />
         <Grid Grid.Column="0" Grid.Row="1" VerticalAlignment="Center" HorizontalAlignment="Center">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition />
@@ -30,7 +28,7 @@
                 <TextBlock Margin="0,0,0,5" FontSize="17">Password:</TextBlock>
                 <PasswordBox Name="PasswordLoginTB" Margin="0,0,0,15" FontSize="14"/>
                 <Button  FontSize="15" Width="50" Margin="0,0,0,15" Content="Login" Click="LoginBtnClicked"/>
-                <TextBlock FontSize="12"><Hyperlink Click="RegisterLinkClick">Don't have an account? Register.</Hyperlink></TextBlock>
+                <TextBlock FontSize="12"><Hyperlink Click="RegisterLinkClicked">Don't have an account? Register.</Hyperlink></TextBlock>
             </StackPanel>
         </Grid>
         <!--<Viewbox Grid.Column="0" Grid.Row="1" StretchDirection="Both" Margin="10,0,10,0">
