Renamed wpf pages from window to page

--- a/Squids-Movies-App/SquidsMovieApp.WPF/ErrorWindow.xaml
+++ b/Squids-Movies-App/SquidsMovieApp.WPF/ErrorWindow.xaml
@@ -11,6 +11,7 @@
         WindowStartupLocation="CenterOwner"
         ResizeMode="NoResize"
         Background="GhostWhite"
+        SizeToContent="Height"
         >
     <Grid Name="ErrorContainer" Margin="20">
         
