--- a/Squids-Movies-App/SquidsMovieApp.WPF/App.xaml
+++ b/Squids-Movies-App/SquidsMovieApp.WPF/App.xaml
@@ -1,7 +1,8 @@
 ﻿<Application x:Class="SquidsMovieApp.WPF.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:SquidsMovieApp.WPF">
+             xmlns:local="clr-namespace:SquidsMovieApp.WPF"
+             StartupUri="MainWindow.xaml">
     <Application.Resources>
         <Style TargetType="Grid">
             <Setter Property="Background" Value="GhostWhite"/>
