--- a/Squids-Movies-App/SquidsMovieApp.WPF/LoadingWindow.xaml
+++ b/Squids-Movies-App/SquidsMovieApp.WPF/LoadingWindow.xaml
@@ -1,19 +1,19 @@
-﻿<Window x:Class="SquidsMovieApp.WPF.ErrorWindow"
+﻿<Window x:Class="SquidsMovieApp.WPF.LoadingWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:SquidsMovieApp.WPF"
+        xmlns:fa="http://schemas.fontawesome.io/icons/"
         mc:Ignorable="d"
-        Title="{Binding ErrorName}"
+        Title="Please wait..."
         Width="300"
         Height="200"
         WindowStartupLocation="CenterOwner"
         ResizeMode="NoResize"
         Background="GhostWhite"
-        SizeToContent="WidthAndHeight"
         >
-    <Grid Name="ErrorContainer" Margin="20">
-        
+    <Grid  Margin="20">
+        <fa:ImageAwesome Icon="Spinner" SpinDuration="2" Spin="True" Height="50" Width="50" />
     </Grid>
 </Window>
