--- a/Squids-Movies-App/SquidsMovieApp.WPF/LoginPage.xaml
+++ b/Squids-Movies-App/SquidsMovieApp.WPF/LoginPage.xaml
@@ -7,7 +7,8 @@
       xmlns:local="clr-namespace:SquidsMovieApp.WPF"
       mc:Ignorable="d" 
       d:DesignHeight="800" d:DesignWidth="1200"
-      Title="Squids Movies - Login">
+      Title="Squids Movies - Login"
+      Name="Login">
 
     <Grid>
         <Grid.ColumnDefinitions>
