--- a/Squids-Movies-App/SquidsMovieApp.WPF/RegisterPage.xaml
+++ b/Squids-Movies-App/SquidsMovieApp.WPF/RegisterPage.xaml
@@ -7,41 +7,50 @@
       mc:Ignorable="d" 
       d:DesignHeight="598" d:DesignWidth="867"
       Title="RegisterPage">
-
-    <Grid>
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition />
-        </Grid.ColumnDefinitions>
-        <Grid.RowDefinitions>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition />
-            <RowDefinition Height="Auto"/>
-        </Grid.RowDefinitions>
-        <ContentPresenter Grid.Column="0" Grid.Row="0" ContentTemplate="{StaticResource LogoHeader}" />
-        <Grid Grid.Column="0" Grid.Row="1" VerticalAlignment="Center" HorizontalAlignment="Center">
+    <ScrollViewer HorizontalScrollBarVisibility="Auto" VerticalScrollBarVisibility="Auto">
+        <Grid>
             <Grid.ColumnDefinitions>
                 <ColumnDefinition />
             </Grid.ColumnDefinitions>
-            <StackPanel Grid.Column="0">
-                <TextBlock  Margin="0,0,0,5" FontSize="17">Email*:</TextBlock>
-                <TextBox Name="EmailRegisterTB" Margin="0,0,0,5" FontSize="14"></TextBox>
-                <TextBlock Margin="0,0,0,5" FontSize="17">Username*:</TextBlock>
-                <TextBox Name="UsernameRegisterTB" Margin="0,0,0,5" FontSize="14"></TextBox>
-                <!--<TextBlock Margin="0,0,0,5" FontSize="17">First name:</TextBlock>
-                <TextBox Name="FirstNamelRegisterTB" Margin="0,0,0,5" FontSize="14"></TextBox>
-                <TextBlock Margin="0,0,0,5" FontSize="17">Last name:</TextBlock>
-                <TextBox Name="LastNameRegisterTB" Margin="0,0,0,5" FontSize="14"></TextBox>-->
-                <TextBlock Margin="0,0,0,5" FontSize="17">Password*:</TextBlock>
-                <PasswordBox Name="PasswordRegisterPB" Margin="0,0,0,5" FontSize="14"/>
-                <TextBlock Margin="0,0,0,5" FontSize="17">Repeat password*:</TextBlock>
-                <PasswordBox Name="PasswordRepeatRegisterPB" Margin="0,0,0,15" FontSize="14"/>
-                <StackPanel Orientation="Horizontal">
-                    <Button  FontSize="15" Width="65" Margin="0,0,15,15" Content="Register" Click="RegisterBtnClicked"/>
-                    <Button  FontSize="15" Width="65" Margin="0,0,15,15" Content="Go Back" Click="GoBackBtnClicked"/>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition />
+                <RowDefinition Height="Auto"/>
+            </Grid.RowDefinitions>
+            <ContentPresenter Grid.Column="0" Grid.Row="0" ContentTemplate="{StaticResource LogoHeader}" />
+            <Grid  Grid.Column="0" Grid.Row="1" VerticalAlignment="Center" HorizontalAlignment="Center">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="*" />
+                </Grid.ColumnDefinitions>
+                <StackPanel Grid.Column="0" Width="350">
+                    <TextBlock  Margin="0,0,0,5" FontSize="17">Email*:</TextBlock>
+                    <TextBox Name="EmailRegisterTB" Margin="0,0,0,5" FontSize="14"></TextBox>
+                    <TextBlock Margin="0,0,0,5" FontSize="17">Username*:</TextBlock>
+                    <TextBox Name="UsernameRegisterTB" Margin="0,0,0,5" FontSize="14"></TextBox>
+                    <TextBlock Margin="0,0,0,5" FontSize="17">Date of birth:</TextBlock>
+                    <StackPanel Name="DateOfBirth" Orientation="Horizontal">
+                        <TextBlock Margin="0,0,5,0">DD</TextBlock>
+                        <ComboBox Name="BirthDD" ItemsSource="{Binding BirthDays}" Width="56"/>
+
+                        <TextBlock Margin="5,0,5,0">MM</TextBlock>
+                        <ComboBox Name="BirthMM" ItemsSource="{Binding BirthMonths}" Width="108"/>
+
+                        <TextBlock Margin="5,0,5,0">YYYY</TextBlock>
+                        <ComboBox Name="BirthYY" ItemsSource="{Binding BirthYears}" Width="70"/>
+
+                    </StackPanel>
+                    <TextBlock Margin="0,0,0,5" FontSize="17">Password*:</TextBlock>
+                    <PasswordBox Name="PasswordRegisterPB" Margin="0,0,0,5" FontSize="14"/>
+                    <TextBlock Margin="0,0,0,5" FontSize="17">Repeat password*:</TextBlock>
+                    <PasswordBox Name="PasswordRepeatRegisterPB" Margin="0,0,0,15" FontSize="14"/>
+                    <StackPanel Orientation="Horizontal">
+                        <Button  FontSize="15" Width="65" Margin="0,0,15,15" Content="Register" Click="RegisterBtnClicked"/>
+                        <Button  FontSize="15" Width="65" Margin="0,0,15,15" Content="Go Back" Click="GoBackBtnClicked"/>
+                    </StackPanel>
+                    <TextBlock FontSize="10" Foreground="Gray">*Required field.</TextBlock>
                 </StackPanel>
-                <TextBlock FontSize="10" Foreground="Gray">*Required field.</TextBlock>
-            </StackPanel>
+            </Grid>
+            <ContentPresenter Grid.Column="0" Grid.Row="2" ContentTemplate="{StaticResource Footer}" />
         </Grid>
-        <ContentPresenter Grid.Column="0" Grid.Row="2" ContentTemplate="{StaticResource Footer}" />
-    </Grid>
+    </ScrollViewer>
 </Page>
