Profile layout done

--- a/Squids-Movies-App/SquidsMovieApp.WPF/App.xaml
+++ b/Squids-Movies-App/SquidsMovieApp.WPF/App.xaml
@@ -8,7 +8,7 @@
             <Setter Property="Background" Value="GhostWhite"/>
         </Style>-->
         <DataTemplate x:Key="NavigationGrid">
-            <Grid Grid.Column="0" Grid.Row="0" Background="CornflowerBlue">
+            <!--<Grid Grid.Column="0" Grid.Row="0" Background="CornflowerBlue">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition />
                     <ColumnDefinition />
@@ -18,7 +18,7 @@
                     <RowDefinition Height="Auto"/>
                 </Grid.RowDefinitions>
                 <TextBlock Margin="10" HorizontalAlignment="Left" Grid.Column="0" Grid.Row="0">Logo and some welcome message</TextBlock>
-                <TextBlock Margin="10" HorizontalAlignment="Right" Grid.Column="1" Grid.Row="0">Hello, *name*!</TextBlock>
+                <TextBlock x:Name="GreetingName" Margin="10" HorizontalAlignment="Right" Grid.Column="1" Grid.Row="0" Text="{Binding Username}"/>
                 <StackPanel Margin="10" Grid.Column="0" Grid.Row="1" Orientation="Horizontal">
                     <TextBox Margin="0,0,15,0" HorizontalAlignment="Left" Width="250"></TextBox>
                     <Button Margin="0,0,15,0" HorizontalAlignment="Left" Width="125" Height="25" Content="Search"/>
@@ -28,7 +28,7 @@
                     <Button Margin="15,0,0,0" Width="50" Height="25" Content="Cart"/>
                     <Button Margin="15,0,0,0" Width="50" Height="25" Content="Profile"/>
                 </StackPanel>
-            </Grid>
+            </Grid>-->
         </DataTemplate>
         <DataTemplate x:Key="Footer">
             <DockPanel LastChildFill="False" Background="CadetBlue" Height="55">
