--- a/Squids-Movies-App/SquidsMovieApp.WPF/ProfilePage.xaml
+++ b/Squids-Movies-App/SquidsMovieApp.WPF/ProfilePage.xaml
@@ -8,7 +8,7 @@
       d:DesignHeight="800" d:DesignWidth="1200"
       Title="Profile">
     <ScrollViewer HorizontalScrollBarVisibility="Auto" VerticalScrollBarVisibility="Auto">
-        <Grid>
+        <Grid Background="White">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition />
             </Grid.ColumnDefinitions>
@@ -17,7 +17,99 @@
                 <RowDefinition />
                 <RowDefinition Height="Auto"/>
             </Grid.RowDefinitions>
-            <ContentPresenter Grid.Row="0" ContentTemplate="{StaticResource NavigationGrid}" />
+            <!--Header-->
+            <Grid Grid.Column="0" Grid.Row="0" Background="CornflowerBlue">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition />
+                    <ColumnDefinition />
+                </Grid.ColumnDefinitions>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="Auto"/>
+                    <RowDefinition Height="Auto"/>
+                </Grid.RowDefinitions>
+                <TextBlock Margin="10" HorizontalAlignment="Left" Grid.Column="0" Grid.Row="0" FontWeight="Bold" Foreground="GhostWhite" FontSize="20">SquidFlix</TextBlock>
+                <TextBlock Name="GreetingName" Margin="10" HorizontalAlignment="Right" Grid.Column="1" Grid.Row="0" Text="Hello" FontSize="15"/>
+                <StackPanel Margin="10" Grid.Column="0" Grid.Row="1" Orientation="Horizontal">
+                    <TextBox Margin="0,0,15,0" HorizontalAlignment="Left" Width="250"></TextBox>
+                    <Button Margin="0,0,15,0" HorizontalAlignment="Left" Width="125" Height="25" Content="Search"/>
+                    <TextBlock VerticalAlignment="Bottom" FontSize="10">Search for movie titles, actors, directors or other users.</TextBlock>
+                </StackPanel>
+                <StackPanel Margin="10" Grid.Column="1" Grid.Row="1" FlowDirection="RightToLeft" Orientation="Horizontal">
+                    <TextBlock Name="UserBalance" Text="{Binding MoneyBalance}"/>
+                    <Button Margin="15,0,0,0" Width="50" Height="25" Content="Cart"/>
+                    <Button Margin="15,0,0,0" Width="50" Height="25" Content="Profile"/>
+                </StackPanel>
+            </Grid>
+            <!--Main-->
+            <Grid Grid.Column="0" Grid.Row="1" >
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition />
+                    <ColumnDefinition />
+                </Grid.ColumnDefinitions>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="360"/>
+                    <RowDefinition Height="*"/>
+                </Grid.RowDefinitions>
+                <StackPanel Margin="20,15,0,0" Grid.Column="0" Grid.Row="0">
+                    <StackPanel Orientation="Horizontal" Margin="0,0,15,5">
+                        <TextBlock Margin="0,0,15,0" FontSize="20">User:</TextBlock>
+                        <TextBlock  Margin="0,0,15,0" Text="{Binding Username}" FontSize="20"></TextBlock>
+                    </StackPanel>
+                    <StackPanel Orientation="Horizontal" Margin="0,0,15,5">
+                        <TextBlock Margin="0,0,15,0" FontSize="20">E-mail:</TextBlock>
+                        <TextBlock  Margin="0,0,15,0" Text="{Binding Email}" FontSize="20"></TextBlock>
+                    </StackPanel>
+                    <StackPanel Orientation="Horizontal" Margin="0,0,15,5">
+                        <TextBlock Margin="0,0,15,0" FontSize="20">First name:</TextBlock>
+                        <TextBlock  Margin="0,0,15,0" Text="{Binding FirstName}" FontSize="20"></TextBlock>
+                        <Button Margin="0,0,15,0">Edit</Button>
+                        <TextBox Width="200" Visibility="Hidden"></TextBox>
+                        <Button Margin="0,0,15,0" Visibility="Hidden">Save</Button>
+                    </StackPanel>
+                    <StackPanel Orientation="Horizontal" Margin="0,0,15,5">
+                        <TextBlock Margin="0,0,15,0" FontSize="20">Last name:</TextBlock>
+                        <TextBlock Margin="0,0,15,0" Text="{Binding LastName}" FontSize="20"></TextBlock>
+                        <Button Margin="0,0,15,0">Edit</Button>
+                        <TextBox Width="200" Visibility="Hidden"></TextBox>
+                        <Button Margin="0,0,15,0" Visibility="Hidden">Save</Button>
+                    </StackPanel>
+                    <StackPanel Orientation="Horizontal" Margin="0,0,15,5">
+                        <TextBlock Margin="0,0,15,0" FontSize="20">Wallet:</TextBlock>
+                        <TextBlock Margin="0,0,15,0" Text="{Binding MoneyBalance}" FontSize="20"></TextBlock>
+                        <Button Margin="0,0,15,0">Add money</Button>
+                    </StackPanel>
+                </StackPanel>
+                <StackPanel Orientation="Horizontal" Grid.Column="1" Grid.Row="0">
+                    <ListBox BorderThickness="0" Width="270" Margin="20,0,0,0" Name="BoughtMoviesLB" ScrollViewer.VerticalScrollBarVisibility="Auto">
+                        <TextBlock FontWeight="Bold" FontSize="20">Movies you own</TextBlock>
+                    </ListBox>
+                    <ListBox BorderThickness="0" Width="270" Grid.Column="1" Grid.Row="0"  Margin="20,0,0,0" Name="LikedMoviesLB" ScrollViewer.VerticalScrollBarVisibility="Auto">
+                        <TextBlock FontWeight="Bold" FontSize="20" >Movies you like</TextBlock>
+                    </ListBox>
+                </StackPanel>
+                <StackPanel Orientation="Horizontal" Grid.Column="0" Grid.Row="1">
+                    <ListBox BorderThickness="0" Width="270" Margin="20,0,0,0" Name="FollowingLB" ScrollViewer.VerticalScrollBarVisibility="Auto">
+                        <TextBlock FontWeight="Bold" FontSize="20">People you follow</TextBlock>
+                    </ListBox>
+                    <ListBox BorderThickness="0" Width="270" Grid.Column="1" Grid.Row="0" Margin="20,0,0,0" Name="FollowersLB" ScrollViewer.VerticalScrollBarVisibility="Auto">
+                        <TextBlock FontWeight="Bold" FontSize="20"> Your followers</TextBlock>
+                    </ListBox>
+                </StackPanel>
+                <StackPanel Orientation="Horizontal" Grid.Column="1" Grid.Row="1">
+                    <ListBox BorderThickness="0" Margin="20,0,0,0" Name="LikedParticipantsLB" ScrollViewer.VerticalScrollBarVisibility="Auto">
+                        <TextBlock FontWeight="Bold" FontSize="20">Actors and directors you follow</TextBlock>
+                    </ListBox>
+                </StackPanel>
+                <!--<ListView  Grid.Column="1" Grid.Row="0"  Height="320" Margin="20,0,0,0" Name="BoughtMoviesLB" ScrollViewer.VerticalScrollBarVisibility="Auto">
+                    <ListView.View>
+                        <GridView>
+                            <GridViewColumn Header="Owned movies" Width="120"/>
+                            <GridViewColumn Width="50"/>
+                        </GridView>
+                    </ListView.View>
+                </ListView>-->
+            </Grid>
+            <!--Footer-->
             <ContentPresenter Grid.Row="2" ContentTemplate="{StaticResource Footer}" />
         </Grid>
     </ScrollViewer>
