--- a/Squids-Movies-App/SquidsMovieApp.WPF/App.xaml
+++ b/Squids-Movies-App/SquidsMovieApp.WPF/App.xaml
@@ -7,38 +7,16 @@
         <!--<Style TargetType="Grid">
             <Setter Property="Background" Value="GhostWhite"/>
         </Style>-->
-        <DataTemplate x:Key="NavigationGrid">
-            <!--<Grid Grid.Column="0" Grid.Row="0" Background="CornflowerBlue">
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition />
-                    <ColumnDefinition />
-                </Grid.ColumnDefinitions>
-                <Grid.RowDefinitions>
-                    <RowDefinition Height="Auto"/>
-                    <RowDefinition Height="Auto"/>
-                </Grid.RowDefinitions>
-                <TextBlock Margin="10" HorizontalAlignment="Left" Grid.Column="0" Grid.Row="0">Logo and some welcome message</TextBlock>
-                <TextBlock x:Name="GreetingName" Margin="10" HorizontalAlignment="Right" Grid.Column="1" Grid.Row="0" Text="{Binding Username}"/>
-                <StackPanel Margin="10" Grid.Column="0" Grid.Row="1" Orientation="Horizontal">
-                    <TextBox Margin="0,0,15,0" HorizontalAlignment="Left" Width="250"></TextBox>
-                    <Button Margin="0,0,15,0" HorizontalAlignment="Left" Width="125" Height="25" Content="Search"/>
-                </StackPanel>
-                <StackPanel Margin="10" Grid.Column="1" Grid.Row="1" FlowDirection="RightToLeft" Orientation="Horizontal">
-                    <TextBlock>$Balance</TextBlock>
-                    <Button Margin="15,0,0,0" Width="50" Height="25" Content="Cart"/>
-                    <Button Margin="15,0,0,0" Width="50" Height="25" Content="Profile"/>
-                </StackPanel>
-            </Grid>-->
+        <DataTemplate x:Key="LogoHeader">
+            <Border Height="55" Padding="10" Background="CornflowerBlue">
+                <Label VerticalAlignment="Center" FontWeight="Bold" Foreground="GhostWhite" FontSize="20">SquidFlix</Label>
+            </Border>
         </DataTemplate>
         <DataTemplate x:Key="Footer">
             <DockPanel LastChildFill="False" Background="CadetBlue" Height="55">
                 <Button Width="125" Height="25" Content="Exit" DockPanel.Dock="Right" Margin="0,0,15,0" Click="ExitBtnClicked"/>
+                <TextBlock Height="25" DockPanel.Dock="Left" Margin="15,0,15,0" Foreground="PowderBlue" Text="Team 8 - 'The Madly Squids' - Project for Telerik Academy Alpha Database course - 2018 "/>
             </DockPanel>
-        </DataTemplate>
-        <DataTemplate x:Key="LogoHeader">
-            <Border Height="55" Padding="10" Background="CornflowerBlue">
-                <Label VerticalAlignment="Center" Foreground="White">Squids Logo</Label>
-            </Border>
         </DataTemplate>
     </Application.Resources>
 </Application>
